# persine

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst
docs/user/: bridges-actions.rst  install.rst  quickstart.rst
extensions/: ublock-origin.crx
persine/: __init__.py  persona.py  persona_engine.py  utils.py
persine/bridges/: __init__.py  amazon.py  bridge.py  youtube.py
tests/: test_engine.py  test_persine.py  test_persona.py  test_utils.py
tests/bridges/: test_yt_bridge.py
