[tool.poetry]
name = "persine"
version = "0.1.3"
description = "Persine is an automated tool to study and reverse-engineer algorithmic recommendation systems. It has a simple interface and encourages reproducible results."
authors = ["Jonathan Soma <jonathan.soma@gmail.com>"]
include = ["extensions/ublock-origin.crx"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jsoma/persine"
repository = "https://github.com/jsoma/persine"
documentation = "https://persine.readthedocs.io"
keywords = ["algorithmic accountability", "recommendation systems", "scraping"]

[tool.poetry.dependencies]
python = ">=3.6.3"
beautifulsoup4 = ">=4.6.3"
selenium = "^3.141.0"
pandas = "^1.1.5"
Pillow = ">=7.0.0"
sphinx = {version = "^3", optional = true}

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.2.1"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
